Bugfixes, added covers, attempt to change mobile scale

--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   --scale: 0.8;
 }
 
+@media screen and (min-height: 1000px) {
+  :root {
+    --scale: 1.3; 
+  }
+}
+
 body {
   background-color: black;
 }
